# Discord-Package

./: .gitignore  README.md  netlify.toml  next.config.js  package.json  tsconfig.json
.claude/skills/brainstorm/: SKILL.md
.github/workflows/: nextjs.yml
components/: Data.tsx  Loading.tsx  Upload.tsx  demo.tsx
components/utils/: index.js
components/workers/: channel.worker.ts  coordinator.worker.ts  package.worker.ts  shared-memory.ts
public/: CNAME
types/: react-twemoji.d.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
